--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-asgiref==3.3.1
-Django==3.1.7
+asgiref==3.3.4
+Django==3.2
 django-crispy-forms==1.11.2
+django-taggit==1.3.0
 Pillow==8.2.0
 pytz==2021.1
 sqlparse==0.4.1
