--- a/communityForum/requirements.txt
+++ b/communityForum/requirements.txt
@@ -4,6 +4,7 @@ django-crispy-forms==1.11.2
 django-taggit==1.3.0
 Markdown==3.3.4
 Pillow==8.2.0
+python-decouple==3.4
 python-slugify==4.0.1
 pytz==2021.1
 sqlparse==0.4.1
